--- a/Tema_1/ECMM.ipynb
+++ b/Tema_1/ECMM.ipynb
@@ -303,24 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Definir la cantidad de puntos a evaluar\n",
-    "n = int(input(\"Ingrese la cantidad de puntos a evaluar: \"))\n",
-    "\n",
-    "# Crear una lista para almacenar los puntos ingresados por el usuario\n",
-    "puntos = []\n",
-    "\n",
-    "# Pedir al usuario que ingrese los puntos a evaluar\n",
-    "for i in range(n):\n",
-    "    punto = float(input(f\"Ingrese el punto {n + 1}: \"))\n",
-    "    # Verificar que el punto esté dentro del intervalo de t\n",
-    "    if p1 <= punto <= pn:\n",
-    "        puntos.append(punto)\n",
-    "    else:\n",
-    "        print(f\"Error: El punto {punto} está fuera del intervalo [{p1}, {pn}].\")"
+    "# Definir el orden del polinomio de aproximación\n",
+    "n = int(input(\"Ingrese el orden del polinomio de aproximación: \"))"
    ]
   },
   {
